Authentication V1 (Citizen only)

--- a/frontend/src/components/admin-sidebar.html
+++ b/frontend/src/components/admin-sidebar.html
@@ -8,6 +8,7 @@
       <li><a href="./account-approval.html" class="block hover:text-blue-300">Account Approval</a></li>
       <li><a href="./manage-role.html" class="block hover:text-blue-300">Manage Role</a></li>
       <li><a href="./manage-accounts.html" class="block hover:text-blue-300">Disabled Accounts</a></li>
+      <li><a href="../common/account-settings.html" class="block hover:text-blue-300">Account</a></li>
     </ul>
   </nav>
   <div class="p-4 border-t border-blue-700">
