--- a/frontend/src/components/auditor-sidebar.html
+++ b/frontend/src/components/auditor-sidebar.html
@@ -8,6 +8,7 @@
       <li><a href="./profile.html" class="block hover:text-blue-300">Profile</a></li>
       <li><a href="./view-transactions.html" class="block hover:text-blue-300">View Transactions</a></li>
       <li><a href="./submit-report.html" class="block hover:text-blue-300">Submit Reports</a></li>
+      <li><a href="../common/account-settings.html" class="block hover:text-blue-300">Account</a></li>
     </ul>
   </nav>
   <div class="p-4 border-t border-blue-700">
