--- a/frontend/src/components/gov-sidebar.html
+++ b/frontend/src/components/gov-sidebar.html
@@ -9,6 +9,7 @@
       <li><a href="./view-transactions.html" class="block hover:text-blue-300">View Transactions</a></li>
       <li><a href="./view-projects.html" class="block hover:text-blue-300">View Projects</a></li>
       <li><a href="./add-record.html" class="block hover:text-blue-300">Add Project + Record</a></li>
+      <li><a href="../common/account-settings.html" class="block hover:text-blue-300">Account</a></li>
     </ul>
   </nav>
   <div class="p-4 border-t border-blue-700">
