--- a/frontend/src/components/auditor-sidebar.html
+++ b/frontend/src/components/auditor-sidebar.html
@@ -1,6 +1,7 @@
-<aside class="h-screen w-64 bg-blue-800 text-white flex flex-col">
-  <div class="p-6 text-2xl font-bold border-b border-blue-700">
-    System Administrators
+<aside class="h-screen w-64 bg-white text-black flex flex-col">
+  <div class="p-6 border-b border-blue-700 flex flex-col items-center">
+    <img src="../../../assets/img/logo/logo.jpeg" alt="Logo" class="w-20 h-20 mb-3">
+    <span class="text-2xl font-bold">Auditor</span>
   </div>
   <nav class="flex-1 p-4">
     <ul class="space-y-4">
